As a user I can login [Delivers #2]
