# index.js
@@ -9,7 +9,7 @@ const dotenv = require('dotenv');
 const User = require('./models/User');
 //Import Routes
 const usersRoute = require('./routes/users');
-//const sessionsRoute = require('./routes/sessions');
+const loginRoute = require('./routes/login');
 const accountsRoute = require('./routes/accounts');
 
 //const { body, validationResult } = require('express-validator');
@@ -38,26 +38,6 @@ app.use(express.urlencoded({
 
 app.use(bodyParser.json());
 
-app.use(async (req, res, next) => {
-  if (req.headers["x-access-token"]) {
-    try {
-      const accessToken = req.headers["x-access-token"];
-      const { userId, exp } = await jwt.verify(accessToken, process.env.JWT_SECRET);
-      // If token has expired
-      if (exp < Date.now().valueOf() / 1000) {
-        return res.status(401).json({
-          error: "JWT token has expired, please login to obtain a new one"
-        });
-      }
-      res.locals.loggedInUser = await User.findById(userId);
-      next();
-    } catch (error) {
-      next(error);
-    }
-  } else {
-    next();
-  }
-});
 app.use('/doc', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 //app.use(enableCORS);
 //app.use(RequestHeadersHaveCorrectContentType);
@@ -70,7 +50,7 @@ app.get('/', (req, res) => {
   res.send('We are on home');
 });
 app.use('/users', usersRoute);
-//app.use('/sessions', sessionsRoute);
+app.use('/login', loginRoute);
 app.use('/accounts', accountsRoute);
 
 // Listening to the server
